sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: ')' expected but 'for' found.
  if (plusPetit(i-1, i) for(i<-1 to n-1)){
                        ^AlgBubbleSort1:4: error: illegal start of simple expression
  if (plusPetit(i-1, i) for(i<-1 to n-1)){
                                        ^