sort.basic.bubble.AlgBubbleSort1.scala.code
def testSort() {
  n=getNombreValeurs()
	if (plusPetit(i-1, i) for(i<-1 to n-1)){
    return true
  }
     
  else{
      return false
    }
  }




def bubbleSort()  {
  n=getNombreValeurs() 
  while(testSort()==true){
  	for(i<-1 to n-1) {
    	if (plusPetit(i-1, i)==false ){
      	echange(i-1, i)} 
   }
  }
}